# mqpp

./: CMakeLists.txt  DOXYFILE  README.md
docs/: README.md
docs/html/: annotated.html  annotated_dup.js  broker_8cpp.html  broker_8hpp.html  broker_8hpp.js  broker_8hpp_source.html  class_string_serializer.html  classes.html  classmqpp_1_1_broker-members.html  classmqpp_1_1_broker.html  classmqpp_1_1_broker.js  classmqpp_1_1_consumer-members.html  classmqpp_1_1_consumer.html  classmqpp_1_1_consumer.js  classmqpp_1_1_http_transport-members.html  classmqpp_1_1_http_transport.html  classmqpp_1_1_http_transport.js  classmqpp_1_1_i_transport-members.html  classmqpp_1_1_i_transport.html  classmqpp_1_1_i_transport.js  classmqpp_1_1_message-members.html  classmqpp_1_1_message.html  classmqpp_1_1_message.js  classmqpp_1_1_message_dispatcher-members.html  classmqpp_1_1_message_dispatcher.html  classmqpp_1_1_message_dispatcher.js  classmqpp_1_1_message_store-members.html  classmqpp_1_1_message_store.html  classmqpp_1_1_message_store.js  classmqpp_1_1_publisher-members.html  classmqpp_1_1_publisher.html  classmqpp_1_1_publisher.js  classmqpp_1_1_string_serializer-members.html  classmqpp_1_1_string_serializer.html  classmqpp_1_1_subscription_manager-members.html  classmqpp_1_1_subscription_manager.html  classmqpp_1_1_subscription_manager.js  classmqpp_1_1_time_util-members.html  classmqpp_1_1_time_util.html  classmqpp_1_1_uuid_util-members.html  (+126 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  functions_0.js  functions_1.js  functions_10.js  (+32 more)
examples/: broker_example.cpp  consumer_example.cpp  publisher_example.cpp
src/: shared.hpp
src/client/: broker.cpp  broker.hpp  consumer.cpp  consumer.hpp  publisher.cpp  publisher.hpp  shared.hpp
src/core/: broker.cpp  broker.hpp  config.hpp  consumer.hpp  message.cpp  message.hpp  publisher.hpp  shared.hpp  string_utils.hpp  subscription_manager.cpp  subscription_manager.hpp  types.hpp
src/dispatching/: message_dispatcher.cpp  message_dispatcher.hpp
src/message/: message.cpp  message.hpp
src/network/: http_transport.cpp  http_transport.hpp  transport_interface.hpp
src/persistence/: message_store.cpp  message_store.hpp
src/subscription/: subscription_manager.cpp  subscription_manager.hpp
src/threading/: message_dispatcher.cpp  message_dispatcher.hpp  thread_pool.cpp  thread_pool.hpp
src/util/: string_utils.hpp  time_util.hpp  uuid_util.hpp
